z-index fix

--- a/style/style.css
+++ b/style/style.css
@@ -97,7 +97,7 @@ html {
   /* position: absolute; */
   width: 1104px;
   height: 800px;
-  left: 176px;
+  left: 276px;
   top: 0px;
 }
 
@@ -107,4 +107,12 @@ html {
   height: 800px;
   left: 640px;
   top: 0px;
+  z-index: -1;
+}
+
+.information_info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
 }
